--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.yourorg</groupId>
+    <groupId>com.github.dmccall20</groupId>
     <artifactId>rewrite-recipe-starter</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
@@ -193,7 +193,7 @@
             </plugin>
             <!--
                 Only needed when you want to apply the OpenRewriteBestPractices recipe to your recipes through
-                ./mvnw rewrite:run -Drewrite.activeRecipes=com.yourorg.ApplyRecipeBestPractices
+                ./mvnw rewrite:run -Drewrite.activeRecipes=com.github.dmccall20.ApplyRecipeBestPractices
             -->
             <plugin>
                 <groupId>org.openrewrite.maven</groupId>
