--- a/src/main/resources/META-INF/rewrite/stringutils.yml
+++ b/src/main/resources/META-INF/rewrite/stringutils.yml
@@ -16,7 +16,7 @@
 
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: com.yourorg.UseApacheStringUtils
+name: com.github.dmccall20.UseApacheStringUtils
 displayName: Use Apache `StringUtils`
 description: Replace Spring string utilities with Apache string utilities.
 recipeList:
